# Task-Sample-FioTrix

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  env.sample  main.py  pyproject.toml  tech.MD
app/: __init__.py  config.py  crud.py  database.py  models.py  schemas.py
app/routers/: __init__.py  tasks.py
common_lib/: __init__.py  utils.py
dockerfiles/: app.Dockerfile
migrations/: README  env.py
migrations/versions/: 27ee0adeb843_init_migration.py  505b28cb110b_init.py
scripts/: install.sh  install_dep.sh  run_tests.sh  run_web.sh  setup_migration.sh
systemd/: task.service
